traces/bug_574.txt
src/femlib/FESpace.cpp:689: error: DEAD_STORE
  The value written to &NbDfOnEdge (type int) is never used.
Showing all 1 steps of the trace


src/femlib/FESpace.cpp:689:3: Write of unused value
687.     int nbdfe=TFE.NbDoF; 
688.     int NbDfOnSommet=TFE.NbDfOnVertex;
689.     int NbDfOnEdge=TFE.NbDfOnEdge;
         ^
690.     int NbDfOnElement=TFE.NbDfOnElement;
691.     int NbNodeonVertex=0;
